test_suite/alan-2022-examples/failing/002820_mutation.alan
source fo begin VO z := 9 5 end
